--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+input:focus {
+	outline: none;
+}
+
 .hometypo {
 	text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.5);
 }
